--- a/styles/styles.css
+++ b/styles/styles.css
@@ -122,6 +122,14 @@ footer i {
   margin-top: -0.1rem;
   margin-left: 0.2rem;
 }
+#pay-card input {
+  width: 200px;
+}
+.cvv-icon {
+  width: 30px;
+  position: absolute;
+  right: 2rem;
+}
 @media screen and (max-width: 1023px) {
   .carousel img {
     height: 70vh;
